<resources>
    <string name="app_name">DiaCare</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bilgi1text1">İnsan vücudunun enerji ihtiyacı; alınan besinlerdeki karbonhidrat, protein ve yağlardan sağlanır. Bu besin öğeleri sindirilirken glikoz adı verilen basit şekerler açığa çıkar. Glikoz vücudun tüm organları için en önemli besin kaynağıdır. Glikozun hücre içine girmesini ve glikojen olarak depolanmasını sağlayan, pankreas bezi tarafından salgılanan insülin hormonudur.</string>
    <string name="bilgi1text2">Şeker hastalığı ya da diyabet (Diabetes Mellitus), pankreasın vücut için yeterli miktarda insülin üretememesi ya da ürettiği insülinin vücut tarafından etkili bir şekilde kullanılamaması sonucunda ortaya çıkan, yüksek kan şekeri ile seyreden bir hastalıktır.</string>
    <string name="bilgi1text3">Uluslararası Diyabet Federasyonu verilerine göre; dünyada her 11 yetişkinden 1’i diyabet hastası, 2 diyabetli yetişkinden 1’ine teşhis konulmamış yani diyabetli olduğunu bilmiyor. Ülkemizde yapılan çalışmalarda nerdeyse her 5 kişiden 1 kişide şeker hastalığı mevcut, obezitenin görülme sıklığının artması ile bu oranın daha da artacağı öngörülmektedir.</string>
    <string name="bilgi2text1">Diyabet hastalığı, kişilerde kendini üç temel semptom ile gösterir. Bunlar normalden fazla yemek yeme ve doygunluk hissinin olmaması, sık sık idrarın gelmesi, ağızda kuruluk ile tatlılık hissiyatı ve buna bağlı biçimde aşırı su içme isteği şeklinde sıralanabilir.</string>
    <string name="bilgi2text2">Bunların haricinde kişilerde görülebilecek diğer diyabet semptomları ise şu şekilde sıralanabilir;\n• Halsizlik ve yorgunluk hissiyatı\n• Hızlı ve istemsiz biçimde kilo kaybı\n• Bulanık görüş\n• Ayaklarda uyuşma ve karıncalanma biçiminde rahatsızlık hissi\n• Yaraların normalden daha geç bir sürede iyileşmesi\n• Ciltte kuruluk ve kaşıntı hissi\n• Ağızda aseton gibi bir kokunun oluşumu</string>
    <string name="bilgi3text1">Diyabetin 2 çeşidi vardır. Tip 1 ve Tip 2 diyabet. Teknik olarak her ikisi de diyabet, yani şeker hastalığı çatısı altında toplansa da, Tip 1 ve Tip 2 diyabet aslında çok farklı hastalıklardır ve farklı tedavilere ihtiyaç duyarlar. Tip 1 diyabet, genelde 30 yaş altı ve tamamen insülin eksikliği ile karakterizedir. Tip 1 diyabet, diğerine göre daha nadir olarak görülür. Tip 2 diyabet ise toplumun çoğunda daha sık görülmekte olup, genellikle 30 yaşından sonra ve genetik temelli olarak ortaya çıkar.</string>
    <string name="bilgi3text2">Tip 1 diyabetin yaşam tarzıyla hiçbir ilgisi yoktur. Otoimmun, yani bağışıklık sisteminin kendi dokularına saldırmasıyla ilgili bir hastalıktır. Tip 1 diyabetin de kalıtımsal olma eğilimi vardır. Genellikle viral enfeksiyon gibi bir neden, vücudun pankreasın beta hücrelerini düşman olarak tanımasını başlatır ve bu saldırı nedeniyle pankreas bir süre sonra insülin üretemez hale gelir. Öte yandan Tip 2 diyabet ise büyük ölçüde yaşam tarzı ile alakalıdır ancak ailede Tip 2 diyabeti olan biri varsa sizin de yakalanma olasılığınız normalden yüksektir. Özellikle de fazla kilolularda ve elma tipi obeziteye sahip kişilerde bu oran daha da yükselir.</string>
    <string name="bilgi4text1">En az 8-12 saatlik açlık sonrasında kanda ölçülen glikoz düzeyini açlık kan şekeridir. Sağlıklı kişilerde açlık kan şekerinin normal değerleri 70 ile 100 mg/dl arasında kabul edilir. Hamilelerde açlık kan şekeri değeri ise 95 mg/dl altında olmalıdır. Açlık kan şekerinin 60 mg/dl altında ölçülmesi, hipoglisemi olarak ifade edilir ve hayatı tehdit edici boyutlara varabilir. Açlık kan şekerinin 100 mg/dl üzerinde ölçülmesi şeker hastalığı açısından riskleri ifade eder. 126 mg/dl üzerinde ölçülmesi ise şeker hastalığının tanısal kriteridir.</string>
    <string name="bilgi4text2">Besin alımından 2 saat sonrasında ölçülen kan şekeri düzeyidir. 140 mg/dl üzerinde ölçülen tokluk kan şekeri değeri, şeker hastalığı açısından risk teşkil ederken, 200 mg/dl üzerindeki tokluk kan şekeri değeri şeker hastalığının tanı kriteridir.</string>
    <string name="bilgi4text3">Diyabet hastaları ve risk taşıyan bireyler için kan şekerinin normal seviyesini bilmek ve düzenli ölçüm yapmak çok önemlidir. Kan şekerini kan tahlili yaptırarak öğrenebilirsiniz. Ama daha kolay yöntemleri de elbette var. Evde kan şekerini düzenli olarak izlemek için bir elektronik kan şekeri ölçüm cihazı veya sürekli glukoz ölçüm monitörü (CGM) kullanılabilir. Ayrıca 3 aylık kan şekerinizin ne olduğunu görmek için hemoglobin A1c (HbA1c) testi de yaptırılabilir.</string>
    <string name="bilgi5text1">Kalorisi ve yağı düşük ve lif oranı yüksek gıdalar kan şekeri seviyenizi kontrol etmenize yarar. Her gün aldığınız kalori miktarını azaltır ve kilo vermenize yardımcı olurlar. Meyve, sebze, kepekli tahıllar ve deniz ürünleri satın alabilir ve şekerli içecekler yerine su içebilirsiniz. Tereyağı, hayvansal yağ, hindistancevizi yağı veya palmiye yağı gibi doymuş yağlardan kaçının. Bu arada, gün boyunca küçük öğünler yemeye çalışın.</string>
    <string name="bilgi5text2">Haftada 5 gün en az 30 dakika fiziksel aktivite yapma alışkanlığı kazanmaya yavaş yavaş başlayabilirsiniz. Bisiklete binme, tempolu yürüyüş, yürüyüş vb. gibi orta düzeyde aerobik egzersizleri seçebilirsiniz.</string>
    <string name="bilgi5text3">Kilo aralığınızı kontrol etmek için bir BMI hesaplayıcısı kullanabilirsiniz. Fazla kiloluysanız, vücut ağırlığınızın %7\'sini kaybetmek büyük bir fark yaratacaktır. Bununla birlikte, gestasyonel diyabetiniz varsa, kilo vermeye çalışmayın. Hamilelikte sağlıklı kilo için profesyonel bir doktora danışmanız gerekir.</string>
    <string name="bilgi5text4">Yüksek tansiyonu olan kişilerin tip 2 diyabet geliştirme riski daha yüksektir. Bu nedenle, diyabetin önlenmesi söz konusu olduğunda, normal kan basıncı, kan şekeri düzeylerini kontrol etmek kadar önemlidir. Sağlıklı beslenin, çoğu gün egzersiz yapın, kilonuzu sağlıklı bir aralıkta tutun, çok fazla alkol içmeyin, ne kadar tuz yediğinizi sınırlandırın, hepsi tansiyonunuzu kontrol etmenize yardımcı olacaktır.</string>
    <string name="bilgi6text1">Hipoglisemi, kan şekeri miktarının düşmesi ile ortaya çıkan bir koma durumudur. İnsülini dozun üzerinde uygulayan hastada şeker düşüklüğü görülebilir ve genelde kan şekerinin 45\'in altına indiği durumlarda önce şuur bulanmaya başlar.  Renk soluklaşır, soğuk soğuk terlemeler olabilir ve bazı kas krampları görülebilir. Kişi huzursuzdur, titremeler, ağız kuruluğu ve baygınlık hali gibi durumlar görülebilir. Önemli olan, komaya girmeden müdahale etmektir.</string>
    <string name="bilgi6text2">Hipoglisemide yapılması gerek tedavi şekli diyabetli kişide gözlenen belirtileri göre değişir. Belirtilerin hafif olduğu durumlarda 5-6 adet kesme şekeri bir bardak ılık suda eritilip içirilir ya da 1 büyük çay bardağı şekerli meyve suyu verilebilir. İyileşme belirtileri görülmezse 2 çay kaşığı dolusu şeker ya da 5-6 adet kesme şeker az miktarda suda eritilip küçük yudumlar halinde içirilmelidir. Şuur kaybını olduğu hipoglisemide ise ağızdan şeker veya şekerli su verilemez. Bu durumda kas içine glukagon enjeksiyonu gereklidir ve bu iğnenin yapılması hayati önem taşır. Acilen 112 ile irtibata geçilir. </string>


</resources>