<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/anatema"
    tools:context=".Bilgi5"
    >

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="#C287DC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/geritus"
            android:src="@drawable/back"
            android:background="#C287DC"
            android:contentDescription="Geri"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:fontFamily="@font/montserratextrabold"
            android:text="Diyabetle Başa Çıkmak"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/resim"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/teatime"
                app:layout_constraintBottom_toTopOf="@+id/ll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/resim"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/giris"
                android:backgroundTint="?attr/beyazmavi2"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/ll2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resim">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="• Sağlıklı Yiyecekler Seçin"
                    android:fontFamily="@font/montserratbold"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="10dp"
                    android:textSize="19sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="20dp"
                    android:text="@string/bilgi5text1"
                    android:textSize="17sp"

                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/giris"
                android:backgroundTint="#C287DC"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/ll3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="• Egzersiz Yapın"
                    android:fontFamily="@font/montserratbold"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="20dp"
                    android:text="@string/bilgi5text2"
                    android:textColor="@color/white"
                    android:textSize="17sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/giris"
                android:backgroundTint="?attr/beyazmavi2"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/ll4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratbold"
                    android:paddingLeft="10dp"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp"
                    android:text="• Fazla Kilolardan Kurtulun"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/bilgi5text3"
                    android:textSize="17sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/giris"
                android:backgroundTint="#C287DC"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratbold"
                    android:paddingLeft="10dp"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp"
                    android:text="• Kan Basıncınızı Kontrol Edin"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/bilgi5text4"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>